--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Logs
-logs
+# Start of Selection
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +8,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+node_modules/
+dist/
+dist-ssr/
 *.local
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
-*.ntvs*
+*.ntvs*/
 *.njsproj
 *.sln
 *.sw?
+# End of Selection
