--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -15,6 +14,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-router": "^1.58.16",
     "@tanstack/router-devtools": "^1.58.16",
     "class-variance-authority": "^0.7.0",
