--- a/server/dotnet-api/appsettings.json
+++ b/server/dotnet-api/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
 
   "ApiBaseUrl": "https://api.github.com",
-  "GithubAuthToken": "ghp_1234567890"
+  "GithubAuthToken": "ghp_1234567890",
+  "GithubEnterprise": "github-enterprise"
 }
